Migrate from gradle to maven (because starting a test from the IDE takes oh so long)